# retain

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 10821374dcd2_initial.py  2d346a80ac0e_add_transcript_chunks_for_semantic_.py  99177f82447e_add_updated_at_to_transcript_chunks.py  dc094afcc355_add_sparse_embedding_to_transcript_.py  f927966412d5_halfvec_embedding_sparse_hnsw_index.py
benchmarks/: latency.py  retrieval.py
scripts/: init-db.sh
src/retain/: __init__.py  auth.py  chunking.py  cold_path.py  deps.py  errors.py  hot_path.py  main.py  memory.py  models.py  search.py  settings.py  storage.py  types.py
src/retain/embeddings/: __init__.py  base.py  local.py
src/retain/extraction/: __init__.py  pipeline.py  prompts.py  synthesis.py
src/retain/llm/: __init__.py  base.py  mock.py  openai.py
src/retain/routes/: __init__.py  context.py  events.py  memories.py  search.py  tasks.py
src/retain/storage/: __init__.py  base.py  models.py
tests/: conftest.py  test_api.py  test_chunking.py  test_cold_path.py  test_cold_path_utils.py  test_embeddings.py  test_entity.py  test_extraction.py  test_integration.py  test_llm.py  test_memory.py  test_routes_context.py  test_routes_events.py  test_routes_memories.py  test_routes_search.py  test_routes_tasks.py  test_search.py  test_search_utils.py  test_stubs.py  test_synthesis.py  test_task.py
