[project]
name = "retain"
version = "0.1.0"
description = "The memory layer built for real-time agents — FastAPI server"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [
    { name = "Aditya Mattos" },
]
keywords = [
    "memory",
    "ai-agents",
    "llm",
    "voice-agents",
    "long-term-memory",
    "customer-support",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "pgvector>=0.3",
    "pydantic>=2.0",
    "httpx>=0.28",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.0",
    "alembic>=1.14",
    "psycopg2-binary>=2.9",
]

[project.optional-dependencies]
embeddings = ["sentence-transformers>=3.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/retain"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: fast tests that don't need external services",
    "integration: multi-step end-to-end scenarios",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]
